<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true"
    tools:context=".main.ProfilePage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/black"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/back_icon"
                    android:tint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RedundantDescriptionCheck,UseAppTint" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/profile"
                    android:textColor="#00BCD4"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/backButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backButton"
                    tools:ignore="TextContrastCheck" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/user_profile_image"
                    android:src="@drawable/default_avatar"
                    app:civ_border_color="#00BCD4"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <ImageButton
                    android:id="@+id/edit_profile_image_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/background_shape_red"
                    android:contentDescription="@string/edit_profile_image"
                    android:src="@drawable/add_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image" />


                <EditText
                    android:id="@+id/profile_full_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="name"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/edit_full_name_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageButton
                    android:id="@+id/edit_full_name_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_full_name"
                    android:src="@drawable/edit_icon"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_full_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/profile_full_name"
                    tools:ignore="UseAppTint" />

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="emailAddress"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="sans-serif-thin"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:layout_constraintEnd_toStartOf="@+id/edit_email_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_full_name"
                    tools:ignore="VisualLintTextFieldSize" />

                <ImageButton
                    android:id="@+id/edit_email_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_email"
                    android:src="@drawable/edit_icon"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_email"
                    app:layout_constraintEnd_toEndOf="@+id/edit_full_name_button"
                    app:layout_constraintTop_toTopOf="@+id/profile_email"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/member_since_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/member_since"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_email" />

                <TextView
                    android:id="@+id/member_since_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/member_since_label"
                    app:layout_constraintStart_toEndOf="@+id/member_since_label"
                    tools:text="2024-01-01" />

                <TextView
                    android:id="@+id/change_password_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/prompt_change_password"
                    android:textColor="#00BCD4"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/member_since_label"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:text="Sign Out"
                    android:textColor="#F44336"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/sign_out_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_password_prompt"
                    tools:ignore="HardcodedText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabIndicatorColor="#00BCD4"
            app:tabMode="fixed"
            android:background="@android:color/black"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_blogs" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liked_blogs" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:elevation="100dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
